# mdbook-discord-components

./: .gitignore  Cargo.toml  README.md  index.html  style.css
.github/workflows/: release.yaml  wasm-page.yaml
mdbook-discord-components/: Cargo.toml
mdbook-discord-components-derive/: Cargo.toml
mdbook-discord-components-derive/src/: lib.rs
mdbook-discord-components-wasm/: Cargo.toml
mdbook-discord-components-wasm/src/: lib.rs
mdbook-discord-components-wasm/static/: script.js  style.css
mdbook-discord-components/src/: discord.rs  lib.rs  main.rs
mdbook-discord-components/src/components/: components.rs  embed.rs  invite.rs  message.rs  mod.rs
mdbook-discord-components/src/generators/: html.rs  mod.rs
mdbook-discord-components/src/parsers/: experimental_parser.rs  mod.rs  yaml_parser.rs
pkg/: mdbook_discord_components_wasm.js  mdbook_discord_components_wasm_bg.wasm
src/: discord.rs  lib.rs  main.rs  preprocessor.rs
src/components/: embed.rs  message.rs
