[package]
name = "mdbook-discord-components-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
mdbook-discord-components = { path = "../mdbook-discord-components", default_features = false }

wasm-bindgen = "0.2"
js-sys = "0.3"
pulldown-cmark = "0.9"

console_error_panic_hook = { version = "0.1", optional = true }
