[package]
name = "mdbook-discord-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[features]
default = ["clap", "mdbook", "http"]
http = ["oxhttp"]

[dependencies]
mdbook-discord-components-derive = { path = "../mdbook-discord-components-derive" }

mdbook = { version = "0.4", default_features = false, optional = true }
clap = { version = "4", default_features = false, features = ["std", "help", "usage"], optional = true }
serde = { version = "1", default_features = false, features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde-aux = { version = "4", default_features = false }
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "10"
lazy_static = "1"
regex = "1"
oxhttp = { version = "0.1", default_features = false, features = ["client", "rustls"], optional = true }
anyhow = "1"
convert_case = "0.6"
